améliration gestion historique avec api dédiée

--- a/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
+++ b/src/main/webapp/scripts/app/agent/admissibility/admissibility.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<!-- FAMILY -->
-	<!-- // TODO Changer cette condition evidemment -->
+	<!-- // TODO Changer cette condition evidemment (pour prendre en compte tous les membres de la famille) -->
 	<div ng-if="identity.family.parents">
 		<div class="row">
 			<div class="col-xs-9 col-sm-8 col-sm-offset-1">
