--- a/src/main/webapp/scripts/app/application/identity/identity-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-view.html
@@ -4,6 +4,9 @@
 	    <div class="form-group">
 	        <label translate="identity.form.passportNumber">PassportNumber</label> : <span>{{::identity.passportNumber}}</span>
 	    </div>
+	    <div class="form-group" ng-if="needResidencyCountry">
+	        <label translate="identity.form.residencyCountry">ResidencyCountry</label> : <span>{{::$root.countries[identity.residencyCountry]}}</span>
+	    </div>
 	    <div class="form-group">
 	        <label translate="identity.form.maritalStatus">Marital status</label> : <span>{{::'sejourApp.MaritalStatus.' + identity.maritalStatus | translate}}</span>
 	    </div>
