--- a/src/main/webapp/scripts/app/application/identity/identity.html
+++ b/src/main/webapp/scripts/app/application/identity/identity.html
@@ -33,6 +33,15 @@
 			            </p>
 			        </div>
 			    </div>
+			    <div class="form-group" ng-if="needResidencyCountry">
+			        <label translate="identity.form.residencyCountry" for="field_residencyCountry">ResidencyCountry</label>
+			        <select-country name="residencyCountry" id="field_residencyCountry" ng-model="identity.residencyCountry" required></select-country>
+			        <div ng-show="identityLightForm.residencyCountry.$dirty && identityLightForm.residencyCountry.$invalid">
+			            <p class="help-block" ng-show="identityLightForm.residencyCountry.$error.required" translate="entity.validation.required">
+			                This field is required.
+			            </p>
+			        </div>
+			    </div>
 				<div class="form-group">
 			        <label translate="identity.form.maritalStatus" for="field_maritalStatus">Marital status</label>
 			        <select-marital-status field-name="maritalStatus" field-id="field_maritalStatus" ng-model="identity.maritalStatus" required></select-marital-status>
