--- a/src/main/webapp/scripts/app/application/rdv/rdv.html
+++ b/src/main/webapp/scripts/app/application/rdv/rdv.html
@@ -66,16 +66,16 @@
 		<div class="row row-center" ng-if="isRdvInFrance">
 			<div class="col-xs-6 col-sm-4 col-sm-offset-1" style="text-align: left; padding: 20px 0px 0px 35px;">
 				<dfn>
-					<p><strong>Préfecture de Seine-Saint-Denis</strong></p>
-					<p>Bureau des naturalisations</p>
+					<p><strong>Préfecture de police de Paris</strong></p>
 					<br>
-					<p>1 Esplanade Jean Moulin</p>
-					<p>93007 Bobigny</p>
-					<p>Tél : +33 1 41 60 60 60</p>
+					<p>1 rue de Lutèce</p>
+					<p>Place Louis Lépine</p>
+					<p>75004 Paris</p>
+					<p>Tél : +33 1 53 71 53 71</p>
 				</dfn>
 			</div>
 			<div class="col-xs-6 col-sm-7 col-md-6">
-				<img src="assets/images/map_prefecture.png" class="img-responsive img-thumbnail">
+				<img src="assets/images/map_prefecture.jpeg" class="img-responsive img-thumbnail">
 			</div>
 		</div>
 		<br>
