--- a/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant-view.html
+++ b/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant-view.html
@@ -1,5 +1,8 @@
 <div ng-cloak>
     <div class="col-sm-5">
+		<div class="form-group" ng-if="project.comingDate">
+            <label translate="project.form.comingDate">ComingDate</label> : <span>{{::$root.getFormattedDate(project.comingDate)}}</span>
+        </div>
         <div class="form-group">
             <label translate="project.form.university">University</label> : <span>{{::project.university}}</span>
         </div>
